# simplecrypto-cxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench.cpp  bench_c.cpp  main.cpp  sha2.cpp
.github/workflows/: ccpp.yml
simplecrypto-cxx/: CMakeLists.txt  base58.cpp  base58.h  blake3.cpp  blake3.h  hmac.cpp  hmac.h  hmac512.cpp  hmac512.h  pbkdf2.cpp  pbkdf2.h  ripemd160.cpp  ripemd160.h  sha2.cpp  sha2.hpp  sha224.cpp  sha224.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h  sha384.cpp  sha384.h  sha512.cpp  sha512.h
simplecrypto-cxx/blake3/: CMakeLists.txt  CheckCSourceRuns.cmake
simplecrypto-cxx/cmake/: sanitizers.cmake  warnings.cmake
tests/: CMakeLists.txt  blake3_tests.h  sha3_tests.cpp  sha3_tests.h  test_utils.h  testmain.cpp
